// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar Range renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="Choose date range"
      aria-modal="true"
      class="css-1kpg5z4-boxStyles-CalendarRangeContainer"
      role="dialog"
    >
      <div
        class="rdp-root"
        data-mode="range"
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month"
          >
            <div
              class="rdp-month_caption"
            >
              <button
                aria-label="Go to the Previous Month"
                class="rdp-button_previous"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-1g6fn8w-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m15 18-6-6 6-6"
                  />
                </svg>
              </button>
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
              >
                June 2023
              </h2>
              <div
                class="css-v0gr9g-boxStyles"
              >
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r4:-select"
                  >
                    Month
                  </label>
                  <select
                    autocomplete="off"
                    class="css-lbmsza-boxStyles-YearMonthSelect"
                    id="calendar-:r4:-select"
                  >
                    <option
                      value="0"
                    >
                      January
                    </option>
                    <option
                      value="1"
                    >
                      February
                    </option>
                    <option
                      value="2"
                    >
                      March
                    </option>
                    <option
                      value="3"
                    >
                      April
                    </option>
                    <option
                      value="4"
                    >
                      May
                    </option>
                    <option
                      value="5"
                    >
                      June
                    </option>
                    <option
                      value="6"
                    >
                      July
                    </option>
                    <option
                      value="7"
                    >
                      August
                    </option>
                    <option
                      value="8"
                    >
                      September
                    </option>
                    <option
                      value="9"
                    >
                      October
                    </option>
                    <option
                      value="10"
                    >
                      November
                    </option>
                    <option
                      value="11"
                    >
                      December
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </div>
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r5:-select"
                  >
                    Year
                  </label>
                  <select
                    autocomplete="off"
                    class="css-lbmsza-boxStyles-YearMonthSelect"
                    id="calendar-:r5:-select"
                  >
                    <option
                      value="2013"
                    >
                      2013
                    </option>
                    <option
                      value="2014"
                    >
                      2014
                    </option>
                    <option
                      value="2015"
                    >
                      2015
                    </option>
                    <option
                      value="2016"
                    >
                      2016
                    </option>
                    <option
                      value="2017"
                    >
                      2017
                    </option>
                    <option
                      value="2018"
                    >
                      2018
                    </option>
                    <option
                      value="2019"
                    >
                      2019
                    </option>
                    <option
                      value="2020"
                    >
                      2020
                    </option>
                    <option
                      value="2021"
                    >
                      2021
                    </option>
                    <option
                      value="2022"
                    >
                      2022
                    </option>
                    <option
                      value="2023"
                    >
                      2023
                    </option>
                    <option
                      value="2024"
                    >
                      2024
                    </option>
                    <option
                      value="2025"
                    >
                      2025
                    </option>
                    <option
                      value="2026"
                    >
                      2026
                    </option>
                    <option
                      value="2027"
                    >
                      2027
                    </option>
                    <option
                      value="2028"
                    >
                      2028
                    </option>
                    <option
                      value="2029"
                    >
                      2029
                    </option>
                    <option
                      value="2030"
                    >
                      2030
                    </option>
                    <option
                      value="2031"
                    >
                      2031
                    </option>
                    <option
                      value="2032"
                    >
                      2032
                    </option>
                    <option
                      value="2033"
                    >
                      2033
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </div>
              </div>
              <button
                aria-label="Go to the Next Month"
                class="rdp-button_next"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-1g6fn8w-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
            <table
              aria-label="June 2023"
              aria-multiselectable="true"
              class="rdp-month_grid"
              role="grid"
            >
              <thead>
                <tr
                  class="rdp-weekdays"
                >
                  <th
                    aria-label="Sunday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Su
                  </th>
                  <th
                    aria-label="Monday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Mo
                  </th>
                  <th
                    aria-label="Tuesday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Tu
                  </th>
                  <th
                    aria-label="Wednesday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    We
                  </th>
                  <th
                    aria-label="Thursday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Th
                  </th>
                  <th
                    aria-label="Friday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Fr
                  </th>
                  <th
                    aria-label="Saturday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-weeks"
              >
                <tr
                  class="rdp-week"
                >
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    aria-label="Selected. 1st June 2023 Thursday"
                    aria-selected="true"
                    class="rdp-day rdp-selected rdp-range_start"
                    data-day="2023-06-01"
                    data-selected="true"
                    data-start-day="true"
                    tabindex="0"
                  >
                    <span
                      tabindex="-1"
                    >
                      1
                    </span>
                  </td>
                  <td
                    aria-label="2nd June 2023 Friday. Between selected dates"
                    class="rdp-day rdp-selected rdp-range_middle"
                    data-day="2023-06-02"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      2
                    </span>
                  </td>
                  <td
                    aria-label="3rd June 2023 Saturday. Between selected dates"
                    class="rdp-day rdp-selected rdp-range_middle"
                    data-day="2023-06-03"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      3
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="4th June 2023 Sunday. Between selected dates"
                    class="rdp-day rdp-selected rdp-range_middle"
                    data-day="2023-06-04"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      4
                    </span>
                  </td>
                  <td
                    aria-label="5th June 2023 Monday. Between selected dates"
                    class="rdp-day rdp-selected rdp-range_middle"
                    data-day="2023-06-05"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      5
                    </span>
                  </td>
                  <td
                    aria-label="6th June 2023 Tuesday. Between selected dates"
                    class="rdp-day rdp-selected rdp-range_middle"
                    data-day="2023-06-06"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      6
                    </span>
                  </td>
                  <td
                    aria-label="Selected. 7th June 2023 Wednesday"
                    aria-selected="true"
                    class="rdp-day rdp-selected rdp-range_end"
                    data-day="2023-06-07"
                    data-end-day="true"
                    data-selected="true"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      7
                    </span>
                  </td>
                  <td
                    aria-label="8th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-08"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      8
                    </span>
                  </td>
                  <td
                    aria-label="9th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-09"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      9
                    </span>
                  </td>
                  <td
                    aria-label="10th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-10"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      10
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="11th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-11"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      11
                    </span>
                  </td>
                  <td
                    aria-label="12th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-12"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      12
                    </span>
                  </td>
                  <td
                    aria-label="13th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-13"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      13
                    </span>
                  </td>
                  <td
                    aria-label="14th June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-14"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      14
                    </span>
                  </td>
                  <td
                    aria-label="15th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-15"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      15
                    </span>
                  </td>
                  <td
                    aria-label="16th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-16"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      16
                    </span>
                  </td>
                  <td
                    aria-label="17th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-17"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      17
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="18th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-18"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      18
                    </span>
                  </td>
                  <td
                    aria-label="19th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-19"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      19
                    </span>
                  </td>
                  <td
                    aria-label="20th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-20"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      20
                    </span>
                  </td>
                  <td
                    aria-label="21st June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-21"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      21
                    </span>
                  </td>
                  <td
                    aria-label="22nd June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-22"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      22
                    </span>
                  </td>
                  <td
                    aria-label="23rd June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-23"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      23
                    </span>
                  </td>
                  <td
                    aria-label="24th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-24"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      24
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="25th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-25"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      25
                    </span>
                  </td>
                  <td
                    aria-label="26th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-26"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      26
                    </span>
                  </td>
                  <td
                    aria-label="27th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-27"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      27
                    </span>
                  </td>
                  <td
                    aria-label="28th June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-28"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      28
                    </span>
                  </td>
                  <td
                    aria-label="29th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-29"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      29
                    </span>
                  </td>
                  <td
                    aria-label="30th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-30"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      30
                    </span>
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`Calendar Single renders correctly 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <div
      aria-label="Choose date"
      aria-modal="true"
      class="css-dwrzmp-boxStyles-CalendarContainer"
      role="dialog"
    >
      <div
        class="rdp-root"
        data-mode="single"
      >
        <div
          class="rdp-months"
        >
          <div
            class="rdp-month"
          >
            <div
              class="rdp-month_caption"
            >
              <button
                aria-label="Go to the Previous Month"
                class="rdp-button_previous"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-1g6fn8w-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m15 18-6-6 6-6"
                  />
                </svg>
              </button>
              <h2
                aria-atomic="true"
                aria-live="polite"
                class="css-3ucdhc-CaptionLabel"
              >
                June 2023
              </h2>
              <div
                class="css-v0gr9g-boxStyles"
              >
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r0:-select"
                  >
                    Month
                  </label>
                  <select
                    autocomplete="off"
                    class="css-lbmsza-boxStyles-YearMonthSelect"
                    id="calendar-:r0:-select"
                  >
                    <option
                      value="0"
                    >
                      January
                    </option>
                    <option
                      value="1"
                    >
                      February
                    </option>
                    <option
                      value="2"
                    >
                      March
                    </option>
                    <option
                      value="3"
                    >
                      April
                    </option>
                    <option
                      value="4"
                    >
                      May
                    </option>
                    <option
                      value="5"
                    >
                      June
                    </option>
                    <option
                      value="6"
                    >
                      July
                    </option>
                    <option
                      value="7"
                    >
                      August
                    </option>
                    <option
                      value="8"
                    >
                      September
                    </option>
                    <option
                      value="9"
                    >
                      October
                    </option>
                    <option
                      value="10"
                    >
                      November
                    </option>
                    <option
                      value="11"
                    >
                      December
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </div>
                <div
                  class="css-8a7wrr-YearMonthSelect"
                >
                  <label
                    class="css-g8kyc5-YearMonthSelect"
                    for="calendar-:r1:-select"
                  >
                    Year
                  </label>
                  <select
                    autocomplete="off"
                    class="css-lbmsza-boxStyles-YearMonthSelect"
                    id="calendar-:r1:-select"
                  >
                    <option
                      value="2013"
                    >
                      2013
                    </option>
                    <option
                      value="2014"
                    >
                      2014
                    </option>
                    <option
                      value="2015"
                    >
                      2015
                    </option>
                    <option
                      value="2016"
                    >
                      2016
                    </option>
                    <option
                      value="2017"
                    >
                      2017
                    </option>
                    <option
                      value="2018"
                    >
                      2018
                    </option>
                    <option
                      value="2019"
                    >
                      2019
                    </option>
                    <option
                      value="2020"
                    >
                      2020
                    </option>
                    <option
                      value="2021"
                    >
                      2021
                    </option>
                    <option
                      value="2022"
                    >
                      2022
                    </option>
                    <option
                      value="2023"
                    >
                      2023
                    </option>
                    <option
                      value="2024"
                    >
                      2024
                    </option>
                    <option
                      value="2025"
                    >
                      2025
                    </option>
                    <option
                      value="2026"
                    >
                      2026
                    </option>
                    <option
                      value="2027"
                    >
                      2027
                    </option>
                    <option
                      value="2028"
                    >
                      2028
                    </option>
                    <option
                      value="2029"
                    >
                      2029
                    </option>
                    <option
                      value="2030"
                    >
                      2030
                    </option>
                    <option
                      value="2031"
                    >
                      2031
                    </option>
                    <option
                      value="2032"
                    >
                      2032
                    </option>
                    <option
                      value="2033"
                    >
                      2033
                    </option>
                  </select>
                  <svg
                    aria-hidden="true"
                    class="css-j57zs3-YearMonthSelect"
                    clip-rule="evenodd"
                    fill-rule="evenodd"
                    focusable="false"
                    height="24"
                    role="img"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </div>
              </div>
              <button
                aria-label="Go to the Next Month"
                class="rdp-button_next"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="css-1g6fn8w-Icon"
                  clip-rule="evenodd"
                  fill-rule="evenodd"
                  focusable="false"
                  height="24"
                  role="img"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m9 18 6-6-6-6"
                  />
                </svg>
              </button>
            </div>
            <table
              aria-label="June 2023"
              aria-multiselectable="false"
              class="rdp-month_grid"
              role="grid"
            >
              <thead>
                <tr
                  class="rdp-weekdays"
                >
                  <th
                    aria-label="Sunday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Su
                  </th>
                  <th
                    aria-label="Monday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Mo
                  </th>
                  <th
                    aria-label="Tuesday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Tu
                  </th>
                  <th
                    aria-label="Wednesday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    We
                  </th>
                  <th
                    aria-label="Thursday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Th
                  </th>
                  <th
                    aria-label="Friday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Fr
                  </th>
                  <th
                    aria-label="Saturday"
                    class="rdp-weekday"
                    scope="col"
                  >
                    Sa
                  </th>
                </tr>
              </thead>
              <tbody
                class="rdp-weeks"
              >
                <tr
                  class="rdp-week"
                >
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                  <td
                    aria-label="Selected. 1st June 2023 Thursday"
                    aria-selected="true"
                    class="rdp-day rdp-selected"
                    data-day="2023-06-01"
                    data-selected="true"
                    tabindex="0"
                  >
                    <span
                      tabindex="-1"
                    >
                      1
                    </span>
                  </td>
                  <td
                    aria-label="2nd June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-02"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      2
                    </span>
                  </td>
                  <td
                    aria-label="3rd June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-03"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      3
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="4th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-04"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      4
                    </span>
                  </td>
                  <td
                    aria-label="5th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-05"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      5
                    </span>
                  </td>
                  <td
                    aria-label="6th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-06"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      6
                    </span>
                  </td>
                  <td
                    aria-label="7th June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-07"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      7
                    </span>
                  </td>
                  <td
                    aria-label="8th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-08"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      8
                    </span>
                  </td>
                  <td
                    aria-label="9th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-09"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      9
                    </span>
                  </td>
                  <td
                    aria-label="10th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-10"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      10
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="11th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-11"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      11
                    </span>
                  </td>
                  <td
                    aria-label="12th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-12"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      12
                    </span>
                  </td>
                  <td
                    aria-label="13th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-13"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      13
                    </span>
                  </td>
                  <td
                    aria-label="14th June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-14"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      14
                    </span>
                  </td>
                  <td
                    aria-label="15th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-15"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      15
                    </span>
                  </td>
                  <td
                    aria-label="16th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-16"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      16
                    </span>
                  </td>
                  <td
                    aria-label="17th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-17"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      17
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="18th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-18"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      18
                    </span>
                  </td>
                  <td
                    aria-label="19th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-19"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      19
                    </span>
                  </td>
                  <td
                    aria-label="20th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-20"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      20
                    </span>
                  </td>
                  <td
                    aria-label="21st June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-21"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      21
                    </span>
                  </td>
                  <td
                    aria-label="22nd June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-22"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      22
                    </span>
                  </td>
                  <td
                    aria-label="23rd June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-23"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      23
                    </span>
                  </td>
                  <td
                    aria-label="24th June 2023 Saturday"
                    class="rdp-day"
                    data-day="2023-06-24"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      24
                    </span>
                  </td>
                </tr>
                <tr
                  class="rdp-week"
                >
                  <td
                    aria-label="25th June 2023 Sunday"
                    class="rdp-day"
                    data-day="2023-06-25"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      25
                    </span>
                  </td>
                  <td
                    aria-label="26th June 2023 Monday"
                    class="rdp-day"
                    data-day="2023-06-26"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      26
                    </span>
                  </td>
                  <td
                    aria-label="27th June 2023 Tuesday"
                    class="rdp-day"
                    data-day="2023-06-27"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      27
                    </span>
                  </td>
                  <td
                    aria-label="28th June 2023 Wednesday"
                    class="rdp-day"
                    data-day="2023-06-28"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      28
                    </span>
                  </td>
                  <td
                    aria-label="29th June 2023 Thursday"
                    class="rdp-day"
                    data-day="2023-06-29"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      29
                    </span>
                  </td>
                  <td
                    aria-label="30th June 2023 Friday"
                    class="rdp-day"
                    data-day="2023-06-30"
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    >
                      30
                    </span>
                  </td>
                  <td
                    tabindex="-1"
                  >
                    <span
                      tabindex="-1"
                    />
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;
